src/components/z-searchbar/styles.css
:host {
  /**
   * @prop --z-searchbar-results-height: Max height of the results container (default: 540px)
   * @prop --z-searchbar-tag-text-color: Color of tag's text (default --color-primary03);
   * @prop --z-searchbar-tag-bg: Color of tag's background (default --color-hover-primary);
   */
  --z-searchbar-tag-text-color: var(--color-primary03);
  --z-searchbar-tag-bg: var(--color-hover-primary);
  --z-searchbar-item-height: 2.75rem;

  z-index: 15;
  display: flex;
  column-gap: calc(var(--space-unit) * 2);
  font-family: var(--font-family-sans);
  font-weight: var(--font-rg);
}

:host,
*,
::after,
::before {
  box-sizing: border-box;
}

.input-container {
  position: relative;
  display: flex;
  width: 100%;
  flex-direction: column;
}

.input-container z-input {
  z-index: 1;
}

.results {
  --item-icon-size: 1rem;
  --z-icon-height: var(--item-icon-size);
  --z-icon-width: var(--item-icon-size);
  --item-inline-padding: calc(var(--space-unit) * 1.5);
  --item-col-gap: var(--space-unit);

  position: absolute;
  top: calc(100% - 1px);
  left: 0;
  overflow: auto;
  width: 100%;
  max-height: var(--z-searchbar-results-height, 540px);
  border: var(--border-size-small) solid var(--color-form-surface03);
  border-top: none;
  background: var(--color-form-background);
}

.results z-list-element {
  --background-color-list-element: var(--color-form-background);

  position: relative;
  display: block;
}

.results > z-list > z-list-element::part(list-item-container) {
  padding: 0 var(--item-inline-padding);
}

.results z-list-element > .list-item {
  position: relative;
  display: flex;
  align-items: center;
  padding: calc(var(--space-unit) * 1.25) calc(var(--space-unit) / 4);
  background-color: transparent;
  color: var(--color-form-default-text);
  fill: var(--color-form-default-icon);
  gap: var(--item-col-gap);
}

.results z-list-element > .list-item:hover {
  background-color: var(--gray100); /* TODO: use correct form-related token when available */
  cursor: pointer;
}

.results z-list-element > .list-item:focus-visible {
  z-index: 1;
  box-shadow: var(--shadow-focus-primary);
  outline: none;
}

/* list elements separator */
.results > z-list > z-list-element:not(:last-child) > .list-item,
.results z-list-group:not(:last-child) > z-list-element:not(.category-heading) {
  border-bottom: 1px solid var(--color-form-surface03);
}

.results z-list-group {
  padding: 0 var(--item-inline-padding);
}

.results z-list-group > z-list-element::part(list-item-container) {
  padding: 0;
}

.results .sub-list {
  padding-left: calc(var(--item-icon-size) + var(--item-col-gap));
}

.results .sub-list z-list-element::part(list-item-container) {
  padding: 0;
}

.results .sub-list z-list-element > .list-item {
  position: relative;
}

/* tree indicators */
.results .sub-list > z-list-element:not(:last-child)::before,
.results .sub-list > z-list-element > .list-item::before {
  position: absolute;
  top: 0;
  left: calc(0px - var(--item-col-gap) - var(--item-icon-size) / 2 + 1px);
  border-left: 1px solid var(--color-form-surface03);
  content: "";
}

/* "|" tree indicator */
.results .sub-list > z-list-element:not(:last-child)::before {
  top: -4px;
  height: calc(100% + 4px);
}

/* "—" tree indicator */
.results .sub-list z-list-element > .list-item::before {
  width: 14px;
  height: calc(var(--z-searchbar-item-height) / 2);
  border-bottom: 1px solid var(--color-form-surface03);
}

.results .category-heading > .category {
  font-style: italic;
}

.results .category-heading > .subcategory {
  text-transform: uppercase;
}

.results z-list-element > .list-item .ellipsis {
  overflow: hidden;
}

.results .ellipsis > .item-label {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.results .item-label mark {
  background: var(--color-primary03);
  color: var(--color-default-text);
}

.results .list-item > z-tag {
  --z-tag-bg: var(--z-searchbar-tag-bg);
  --z-tag-text-color: var(--z-searchbar-tag-text-color);

  margin-left: auto;
  white-space: nowrap;
}

.results .item-show-all {
  width: 100%;
  color: var(--color-primary01);
  cursor: pointer;
  text-align: center;
}

.results .item-no-results {
  display: block;
  padding: calc(var(--space-unit) * 1.5) calc(var(--space-unit) * 1.5) calc(var(--space-unit) * 0.5);
  font-style: italic;
}

.results .item-no-results > ul {
  padding-left: calc(var(--space-unit) * 2);
  margin: var(--space-unit);
}

@media (min-width: 768px) {
  .results {
    --item-icon-size: 1.125rem;
  }
}

